# knowledge

./: .gitignore  README.md
ASSEMBLY/: asm.md  hello-world.asm  sum  sum.asm
BASH/: .bash_aliases  .bashrc  bash.md
BASH/.config/: starship.toml
CSS/: box-model.md  css.md  font.md  image.md  misc.md  overflow.md  properties.md  selectors.md  table.md  text.md  variables.md
DESIGN-PATTERNS/: design-patterns.md
ELASTICSEARCH/: _analyze.md  _cat.md  _count.md  _doc.md  _search.md  basics.md  elasticsearch.md  indices.md
GIT/: .gitconfig  git.md
GRAPHICS/: color-modes.js  color.md  colors.md  graphics.md  rasterization.md  svg.md
GRAPHICS/examples/: rasterization.html
JS/: array.md  comparison.md  data-types.md  functions.md  intl.ts  iteration.md  js.md  jsdoc.md  objects.md  package-lock.json  package.json  set.md  typescript_basics.md  window.md  yup.ts
MATHS/: 2d-coordinate-systems.md  bezier.md  circle-equations.md  convex-hull.md  derivation.md  graphs.md  greak.md  line-intersection.md  linear-algebra.md  linear-equations.md  linear-systems.md  mathjax.md  maths.md  quadratic-equations.md  trigonometry.md  vectors.md
PERL/: basics.md  basics.pl  filesystem.pl  functions.md  functions.pl  perl.md
PERL/exercises/: alphabet-pyramid.pl
PHP/: doctrine.md  php.md  psr.md
PHP/PSR/: psr0.md  (+6 more)
RUST/: basics.md  cargo.md  cli.md  rust.md
RUST/examples/wasm-image-manipulation/: Cargo.toml  index.html
RUST/examples/wasm-image-manipulation/src/: lib.rs
SQL/: sql.md  sqlite.md
SVG/: animations.md  basics.html  basics.md  defs.md  misc.md  svg.md
(+10 files in other folders)
