[package]
name = "wasm-image-manipulation"
version = "0.1.0"
edition = "2021"
description = "Rust WASM Image Manipulation Example"
repository = "https://github.com/gabinbernard/knowledge"
license = "MIT"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]